# advent-of-code

./: .gitignore  README.md
.devcontainer/ocaml/: Dockerfile  devcontainer.json
2022/rust/: Cargo.toml  get-input.ts  justfile
2022/rust/daily-template/benches/: benchmarks.rs
2022/rust/daily-template/src/: lib.rs
2022/rust/day-01/benches/: benchmarks.rs
2022/rust/day-01/src/: lib.rs
2024/deno/: benchmarks.txt  get_input.ts  justfile
2024/deno/benchmarks/: day1.txt  day10.txt  day11.txt  day12.txt  day13.txt  day14.txt  day15.txt  day16.txt  day17.txt  day18.txt  day19.txt  day2.txt  day20.txt  day22.txt  day23.txt  day24.txt  day25.txt  day3.txt  day4.txt  day5.txt  day6.txt  day7.txt  day8.txt  day9.txt
2024/deno/daily-template/: mod.ts  test.ts
2024/deno/day1/: deno.json  mod.ts  test.ts
2024/deno/day10/: mod.ts  test.ts
2024/deno/day11/: mod.ts  test.ts
2024/deno/day12/: mod.ts  test.ts
2024/deno/day13/: deno.json  mod.ts  test.ts
2024/deno/day14/: bench.ts  deno.json  mod.ts  test.ts
2024/deno/day15/: mod.ts  test.ts
2024/deno/day16/: deno.json  mod.ts  part1.ts  test.ts
2024/deno/day17/: mod.ts  test.ts
2024/deno/day18/: mod.ts  test.ts
2024/deno/day19/: mod.ts  (+1 more)
2025/ocaml/: dune  dune-project  get_input.ts  helpers.ml  justfile
2025/ocaml/daily-template/: dune  part1.ml  part2.ml  tests.ml
2025/ocaml/daily-template/lib/: dune  parser.ml  solve1.ml  solve2.ml
2025/ocaml/day1/: dune  part1.ml  part2.ml  tests.ml
2025/ocaml/day1/lib/: dune  parser.ml  solve1.ml  solve2.ml
2025/ocaml/day4/: dune  part1.ml  part2.ml  tests.ml
2025/ocaml/day4/lib/: dune  parser.ml  solve1.ml  solve2.ml
(+66 files in other folders)
