(executable
 (name part1)
 (modules part1)
 (libraries core lib_day1)
 (preprocess (pps ppx_jane)))

(executable
 (name part2)
 (modules part2)
 (libraries core lib_day1)
 (preprocess (pps ppx_jane)))

 (test
  (name tests)
  (modules tests)
  (libraries core lib_day1 helpers)
  (preprocess (pps ppx_jane)))
